Rather sleep in `run.py` instead of when making the call.

--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     {% block head %}
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!--link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"-->
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>{% block title %}{% endblock %} - Alarmanlage</title>
     {% endblock %}
